vbnc/vbnc/tests/Errors/30060-17.vb
Class T
    Const M_String As String = 2L
End Class